# nonce-extension

./: .gitignore  README.md
rust/: Cargo.toml  README.md
rust/nonce-extension/: Cargo.toml  README.md
rust/nonce-extension/src/: lib.rs
rust/src/: main.rs
rust/xaes-gcm/: Cargo.toml  README.md
rust/xaes-gcm/src/: lib.rs
zig/: build.zig  build.zig.zon
zig/src/: main.zig
